--- a/index.htm
+++ b/index.htm
@@ -13,5 +13,8 @@
     <h1>ciao vita mia</h1>
     <h1>brava!</h1>
   </body>
+  <nav>nav1</nav>
+  <nav>nav2</nav>
+  <nav>nav3</nav>
 </html>
-!
+<nav></nav>
